[gd_scene load_steps=6 format=3 uid="uid://bgos7cwjodq8j"]

[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/styles/PanelMenuBar.tres" id="1_hucp2"]
[ext_resource type="Script" uid="uid://81cmv10xe7ak" path="res://panels/UICommandPalette/UICommandPalette.gd" id="2_hucp2"]
[ext_resource type="Texture2D" uid="uid://c8ia6s2pwy1wm" path="res://assets/icons/Component.svg" id="3_v07wq"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/TO_BE_SORTED/UIPanel/EditControls.tscn" id="4_2ap7d"]
[ext_resource type="Script" uid="uid://c1mxckcn5x4su" path="res://components/Scripts/TaggedLineEdit.gd" id="4_blvx6"]

[node name="UICommandPalette" type="PanelContainer" node_paths=PackedStringArray("line_edit", "command_tree", "component_search_tree", "component_search_tree_flat", "dynamic_tree", "edit_controls")]
custom_minimum_size = Vector2(0, 60)
offset_right = 604.0
offset_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("1_hucp2")
script = ExtResource("2_hucp2")
line_edit = NodePath("VBoxContainer/HBoxContainer/ScrollContainer/LineEdit")
command_tree = NodePath("VBoxContainer/ScrollContainer/CommandTree")
component_search_tree = NodePath("VBoxContainer/ScrollContainer/ComponentSearchTree")
component_search_tree_flat = NodePath("VBoxContainer/ScrollContainer/ComponentTreeFlat")
dynamic_tree = NodePath("VBoxContainer/ScrollContainer/DynamicTree")
edit_controls = NodePath("VBoxContainer/HBoxContainer/EditControls")
display_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_v07wq")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
focus_neighbor_bottom = NodePath("../../../ScrollContainer/CommandTree")
placeholder_text = "Command Palette"
select_all_on_focus = true
script = ExtResource("4_blvx6")

[node name="EditControls" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_2ap7d")]
layout_mode = 2
show_edit = false
show_settings = false
show_close = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CommandTree" type="Tree" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../HBoxContainer/ScrollContainer/LineEdit")
columns = 2
hide_root = true
select_mode = 1

[node name="ComponentSearchTree" type="Tree" parent="VBoxContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../HBoxContainer/ScrollContainer/LineEdit")
columns = 2
hide_root = true
select_mode = 1

[node name="ComponentTreeFlat" type="Tree" parent="VBoxContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../HBoxContainer/ScrollContainer/LineEdit")
columns = 2
hide_root = true
select_mode = 1

[node name="DynamicTree" type="Tree" parent="VBoxContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../HBoxContainer/ScrollContainer/LineEdit")
columns = 2
hide_root = true
select_mode = 1

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" method="edit"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" method="_on_gui_input"]
[connection signal="tag_removed" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="_on_line_edit_tag_removed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="item_activated" from="VBoxContainer/ScrollContainer/CommandTree" to="." method="_on_command_tree_item_activated"]
